--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 *{
     box-sizing: border-box;
     margin:0;
+    color:white;
+    font-family: 'Share Tech Mono', monospace;
+}
+#heading{
+    padding-bottom:40px;
+    font-size:40px;
+    font-weight: bolder;
+    color:#f7ca4d;
+    text-shadow: 3px 3px 3px black;;
 }
 body{
     height:100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items:center;
+    background-color:rgb(80 104 129);
 }
-
+.app{
+    box-shadow: 0px 0px 25px grey;
+    border: 3px solid grey;
+}
 .grid{
     display:grid ;
-    width: 320px;
-    height: 325px;
+    border:10px solid black;
 }
 button{
+    font-size: 20px;
     width:80px;
     height:65px;
+    background-color:rgb(92, 89, 89);
+}
+button:hover{
+    color: black;
+    outline: 0.05em solid rgb(179, 176, 176);
+    z-index:3;
 }
 .display{
     text-align:right;
-    color:white;
     background-color:black;
     grid-column: 1/ span 4;
+    padding: 10px;
+}
+.clear{
+    background-color:rgb(204, 46, 19);
 }
 .clear, .zero{
     grid-column: 1/ span 2;
@@ -32,4 +56,8 @@ button{
     height: 130px;
     grid-row: 5/ span 6;
     grid-column: 4;
+    background-color:rgb(12, 55, 134);
+}
+.multiply,.divide,.add,.subtract{
+    background-color:rgb(125 131 130);
 }
